--- a/.github/workflows/buildandrelease.yaml
+++ b/.github/workflows/buildandrelease.yaml
@@ -2,9 +2,7 @@ on:
   push: 
     branches: [main]
     tags: [v*]
-  issues:
-    types:
-      opened
+
   workflow_dispatch: 
 
 jobs:
@@ -34,24 +32,17 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Test Module
-        shell: pwsh
-        run: Invoke-Pester -Output Detailed
+        uses: ./.github/actions/test-module
 
   release:
     permissions:
       contents: write
-
+      
     needs: test
     if: ${{ github.ref_type == 'tag' }}
     runs-on: ubuntu-latest
     steps:
-      - name: PowerShell Release to GitHub
-        shell: pwsh
-        env:
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          Write-Host 'hello world'
-          $Headers = @{
-            'Authorization' = "Bearer $($env:TOKEN)"
-          }
-
+      - name: Release Module
+        uses: softprops/action-gh-release@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
